# conductor

./: Cargo.toml  DEVELOPING.md  Dioxus.toml  README.md  TODO.md  check.sh  serve.sh
.cargo/: config.toml
assets/styling/: button.css  event.css  home.css  info.css  json.css  main.css  moderate.css  navbar.css  queue.css  reports.css  setup.css  users.css
src/: fetch_job.rs  main.rs  nip86.rs  nostr.rs
src/components/: button.rs  json.rs  mod.rs  navbar.rs  rendered_event.rs  userline.rs
src/views/: banned.rs  help.rs  home.rs  info.rs  marked.rs  mod.rs  moderate.rs  queue.rs  reports.rs  setup.rs  users.rs
