[package]
name = "conductor"
version = "0.1.0"
authors = ["Mike Dilger <mike@mikedilger.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = ["router"] }
dioxus-sdk = { version = "0.6", features = ["storage"] }
nostr = { version = "0.39", features = ["std", "nip07", "nip98"] }
serde = { version = "1.0.217", features = ["derive"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
