[package]
name = "conductor"
version = "0.1.0"
authors = ["Mike Dilger <mike@mikedilger.com>"]
description = "A nostr relay manager"
edition = "2021"
license = "MIT"
repository = "https://github.com/mikedilger/conductor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
dashmap = "6.1"
dioxus = { version = "0.6", features = ["router"] }
dioxus-sdk = { version = "0.6", features = ["storage"] }
http = "1.2"
lazy_static = "1.5"
nostr = { version = "0.39", features = ["std", "nip07", "nip98"] }
nostr-sdk = { version = "0.39", features = ["nip07", "nip98"] }
parking_lot = { version = "0.12", features = [ "nightly" ] }
reqwest = { version = "0.12", features = [ "rustls-tls-native-roots" ] }
secp256k1 = { version = "0.28", features = [ "hashes", "global-context", "rand-std" ] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "time"] }
[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
